# quoridor-strategy-game

./: CMakeLists.txt  LICENSE  README.md  README_FR.md
assets/tutorial/: how-to-play-tutorial.txt
cmake/: FindSFML.cmake
docs/: instructions.md  structure.md
docs/Initial Report/: initial_report.aux  initial_report.fdb_latexmk  initial_report.fls  initial_report.out  initial_report.tex  initial_report.toc  initial_report_en.aux  initial_report_en.fdb_latexmk  initial_report_en.fls  initial_report_en.out  initial_report_en.tex  initial_report_en.toc  initial_report_fr.aux  initial_report_fr.fdb_latexmk  initial_report_fr.fls  initial_report_fr.out  initial_report_fr.tex  initial_report_fr.toc
docs/en/: BUILD_RUN.md  CODE_QUALITY.md  CONTROLS.md  FILE_RESPONSIBILITIES.md  FUNCTIONALITIES.md  HEURISTIC_AI.md  OOP_CONCEPTS_USED.md  PROJECT_MANAGEMENT.md  PROJECT_STRUCTURE.md  _unicode_test.txt
docs/fr/: BUILD_RUN.md  CODE_QUALITY.md  CONTROLS.md  FILE_RESPONSIBILITIES.md  FUNCTIONALITIES.md  HEURISTIC_AI.md  OOP_CONCEPTS_USED.md  PROJECT_MANAGEMENT.md  PROJECT_STRUCTURE.md  README.md
include/ai/: AiEngine.hpp  PathFinder.hpp
include/app/: Application.hpp  CreditsScreen.hpp  GameScreen.hpp  HowToPlayScreen.hpp  MenuScreen.hpp  Screen.hpp  TitleScreen.hpp
include/audio/: SfxManager.hpp
include/game/: Board.hpp  Entity.hpp  Field.hpp  GameRules.hpp  GameState.hpp  Move.hpp  MoveTypes.hpp  Pawn.hpp  VisualEntity.hpp  Wall.hpp  WallRules.hpp
include/heuristic/: HeuristicEngine.hpp  PathFinder.hpp  TranspositionTable.hpp
include/ui/: Button.hpp  GameRenderer.hpp  Hud.hpp  InGameBottomBar.hpp  Menu.hpp  PauseMenu.hpp  SpriteEntity.hpp  StateComponent.hpp  UiConstants.hpp  ViewUtils.hpp  WinnerMenu.hpp
src/: main.cpp
src/ai/: AiEngine.cpp  PathFinder.cpp  TranspositionTable.cpp
src/app/: Application.cpp  CreditsScreen.cpp  GameScreen.cpp  HowToPlayScreen.cpp  MenuScreen.cpp  Screen.cpp  TitleScreen.cpp
src/audio/: SfxManager.cpp
src/game/: Board.cpp  Field.cpp  GameRules.cpp  GameState.cpp  Move.cpp  PathFinder.cpp  Pawn.cpp  Wall.cpp  WallRules.cpp
src/heuristic/: HeuristicEngine.cpp  PathFinder.cpp  TranspositionTable.cpp
src/ui/: Button.cpp  (+7 more)
